# MinecraftConsole-Vulkan

./: .gitignore  CMakeLists.txt  MinecraftConsoles.sln  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  crash_report.md  feature_request.md
.planning/: PROJECT.md  ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-renderer-foundation/: 01-01-PLAN.md  01-02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractTexturePack.cpp  AchievementPopup.cpp  AchievementScreen.cpp  ArchiveFile.cpp  ArrowRenderer.cpp  BoatRenderer.cpp  BreakingItemParticle.cpp  BubbleParticle.cpp  BufferedImage.cpp  Camera.cpp  ChatScreen.cpp  ChestRenderer.cpp  ChickenRenderer.cpp  Chunk.cpp  ClientConnection.cpp  ConfirmScreen.cpp  ConnectScreen.cpp  ContainerScreen.cpp  ControlsScreen.cpp  CraftingScreen.cpp  CreateWorldScreen.cpp  CreativeMode.cpp  CreeperRenderer.cpp  CritParticle.cpp  CritParticle2.cpp  DLCTexturePack.cpp  DefaultRenderer.cpp  DefaultTexturePack.cpp  DemoLevel.cpp  DemoMode.cpp  DerivedServerLevel.cpp  DisconnectedScreen.cpp  DragonModel.cpp  EditBox.cpp  EnderDragonRenderer.cpp  EnderParticle.cpp  EndermanRenderer.cpp  EntityTileRenderer.cpp  ExperienceOrbRenderer.cpp  (+102 more)
Minecraft.Client/Apple/: AppleInputStubs.cpp  AppleLinkerStubs.cpp  AppleStubs.cpp  AppleStubs.h
Minecraft.Client/Common/: App_structs.h  ConsoleGameMode.cpp  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCColourTableFile.cpp  DLCGameRulesHeader.cpp  DLCLocalisationFile.cpp  DLCManager.cpp  DLCPack.cpp  DLCSkinFile.cpp
Minecraft.Client/Common/GameRules/: CollectItemRuleDefinition.cpp  CompleteAllRuleDefinition.cpp  ConsoleGenerateStructure.cpp  ConsoleSchematicFile.cpp  GameRuleManager.cpp  NamedAreaRuleDefinition.cpp  UpdatePlayerRuleDefinition.cpp  XboxStructureActionGenerateBox.cpp  XboxStructureActionPlaceBlock.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardManager.cpp
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  LANSessionManager.cpp  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp
Minecraft.Client/Common/Tutorial/: AreaConstraint.cpp  ChangeStateConstraint.cpp  ChoiceTask.cpp  CraftTask.cpp  InfoTask.cpp  Tutorial.cpp  TutorialHint.cpp  XuiCraftingTask.h
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IUIScene_AbstractContainerMenu.h  IUIScene_AnvilMenu.cpp  IUIScene_AnvilMenu.h  IUIScene_BrewingMenu.cpp  IUIScene_ContainerMenu.cpp  IUIScene_CreativeMenu.cpp  IUIScene_DispenserMenu.cpp  IUIScene_FurnaceMenu.cpp  IUIScene_InventoryMenu.cpp  IUIScene_InventoryMenu.h  IUIScene_PauseMenu.cpp  UIComponent_Chat.cpp  UIComponent_Panorama.cpp  UIComponent_PressStartToPlay.cpp  UIComponent_TutorialPopup.cpp  UIControl.cpp  UIControl_Base.cpp  UIControl_CheckBox.cpp  UIControl_EnchantmentBook.cpp  UIControl_EnchantmentButton.cpp  UIControl_Label.cpp  UIControl_PlayerSkinPreview.cpp  UIControl_PlayerSkinPreview.h  UIController.cpp  UIGroup.h  UILayer.h  UIScene.cpp  UIScene.h  UIScene_AbstractContainerMenu.cpp  UIScene_AbstractContainerMenu.h  UIScene_AnvilMenu.h  UIScene_ConnectingProgress.cpp  UIScene_ContainerMenu.cpp  UIScene_ContainerMenu.h  UIScene_ControlsMenu.cpp  UIScene_CraftingMenu.cpp  UIScene_CreateWorldMenu.cpp  UIScene_CreateWorldMenu.h  UIScene_CreativeMenu.cpp  (+40 more)
Minecraft.Client/Common/XUI/: SlotProgressControl.cpp  XUI_Chat.cpp  XUI_ConnectingProgress.cpp  XUI_Control_ComboBox.cpp  XUI_Ctrl_CraftIngredientSlot.cpp  XUI_Ctrl_EnchantmentBook.cpp  XUI_Ctrl_EnchantmentBook.h  XUI_Ctrl_EnchantmentButtonText.cpp  XUI_Ctrl_LoadingProgress.cpp  XUI_Ctrl_MinecraftPlayer.cpp  XUI_Ctrl_MinecraftSkinPreview.cpp  XUI_Ctrl_MinecraftSkinPreview.h  XUI_Ctrl_SlotItemCtrlBase.cpp  XUI_Ctrl_SlotList.cpp  XUI_Ctrl_SplashPulser.cpp  XUI_HUD.cpp  (+65 more)
Minecraft.Client/Durango/: Durango_App.cpp  Durango_Minecraft.cpp  Durango_UIController.h  XboxGameMode.cpp
Minecraft.Client/MacOSX/: CMakeLists.txt  README.md  main.cpp
Minecraft.Client/Orbis/: Orbis_App.cpp  Orbis_App.h  Orbis_Minecraft.cpp  Orbis_PlayerUID.cpp  Orbis_UIController.cpp  Orbis_UIController.h  user_malloc.cpp
Minecraft.Client/PS3/: PS3_App.cpp  PS3_App.h  PS3_Minecraft.cpp  PS3_PlayerUID.cpp  PS3_UIController.cpp  PS3_UIController.h  XboxGameMode.h  Xbox_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp  PSVita_PlayerUID.cpp  PSVita_UIController.cpp  PSVita_UIController.h
Minecraft.Client/Vulkan/: VulkanBootstrapApp.h  VulkanBootstrapAppCore.cpp  VulkanBootstrapAppRender.cpp  VulkanRenderManager.cpp
Minecraft.Client/Windows64/: Windows64_App.cpp  Windows64_Minecraft.cpp  Windows64_StorageHttp.cpp  Windows64_UIController.cpp  Windows64_UIController.h
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Xbox/: Xbox_App.cpp  Xbox_Minecraft.cpp  Xbox_UIController.cpp  Xbox_UIController.h
Minecraft.Client/miniupnpc/: minisoap.c
Minecraft.World/: ArrayWithLength.h  BiomeSource.cpp  ByteBuffer.cpp  C4JThread.cpp  CauldronTile.cpp  Connection.cpp  ConsoleSaveFileOriginal.cpp  Dimension.cpp  DurangoStats.cpp  Entity.cpp  File.cpp  FileHeader.cpp  FileHeader.h  FireTile.cpp  Giant.cpp  GrassTile.cpp  Hasher.cpp  HellDimension.cpp  Language.cpp  Layer.cpp  Level.cpp  Level.h  LevelChunk.cpp  LevelChunk.h  MapItemSavedData.cpp  MemoryLevelStorage.cpp  MemoryLevelStorageSource.cpp  Monster.cpp  Packet.cpp  Player.cpp  RedStoneDustTile.cpp  SignTileEntity.cpp  Socket.cpp  Squid.cpp  Stats.cpp  TheEndDimension.cpp  Villager.cpp  ZonedChunkStorage.cpp  stdafx.h
Minecraft.World/x64headers/: extraX64.h  xuiapp.h
(+68 files in other folders)
